src/test/resources/fixtures/parser/solidity_official_tests/shouldFail/inlineArrayEmptyCellsCheckLvalue.sol
contract c {
  uint[] a;
  function f() returns (uint) {
    a = [,2,3];
    return (a[0]);
  }
}